test/asm/data-in-ram.err
error: data-in-ram.asm(2):
    Section 'code' cannot contain code or data (not ROM0 or ROMX)
error: data-in-ram.asm(4):
    Section 'data' cannot contain code or data (not ROM0 or ROMX)
Assembly aborted with 2 errors!
